cmake_minimum_required(VERSION 3.8)
project(Benchmark)

set(CMAKE_CXX_STANDARD 14)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
if(WIN32)
    include_directories($ENV{MingwInc})
    link_directories($ENV{MingwLib})
elseif(UNIX )
endif()
#add_definitions("-O3")

find_package(Boost 1.64 COMPONENTS REQUIRED system filesystem thread)
if(Boost_FOUND)
    set(LIB ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
    set(IOSource IO/main.cpp)
    if(MINGW)
        set(LIB ${LIB} ws2_32)
    endif()
    add_executable(IO ${IOSource})
    target_link_libraries(IO ${LIB})
endif()